chore: Issue内容の微調整およびログの添付